--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,50 @@
+.App {
+  text-align: center;
+}
+
 body {
-  font-size: 12px;
-  font-family: raleway,sans-serif;
+  font-family: Arial,Helvetica,sans-serif !important;
 }
 
-.h1, h2, h3, h4, h5,  h6 {
-  font-family: Arial,Helvetica,sans-serif;
+.logo {
+  margin-top: 15px;
+  margin-left: 290px !important;
 }
 
-.main {
-  margin-top: 106px;
+.logo img {
+  width: 130%;
 }
 
-.fixed-navbar-top {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1030;
-  display: inline-block;
-  background-color: #fff;
-}
-
-.navbar-brand {
-  color: #3c39ec !important;
+.navbar {
   font-size: 19px !important;
 }
 
-.container-fluid {
-  margin-left: 280px !important;
-}
-
-@media screen and (max-width: 1504px) {
-  .container-fluid {
+@media screen and (max-width: 1560px) {
+  .logo {
+    margin-top: 15px;
     margin-left: 10px !important;
   }
+
+  .logo img {
+    width: 80%;
+  }
 }
+
+.navbar a {
+  text-decoration: none !important;
+  color: #7d59e7;
+}
+
 
 .footer-container {
   background-color: rgb(43 42 42);
 }
 
-a {
+.main {
+  margin-top: 80px !important;
+}
+
+.footer-container a {
   color: #FFF !important;
 }
 
@@ -48,11 +52,6 @@ a {
   color: #FFF !important;
   text-decoration: none !important;
   font-weight: 700;
-}
-
-.copyright {
-  color: #FFF !important;
-  text-decoration: none !important;
 }
 
 .online-container {
@@ -64,109 +63,11 @@ a {
 
 .main-back {
   width: 100% !important;
-  height: 380px !important;
-  opacity: 0.3;
+  height: 450px !important;
+  opacity: 0.4;
   object-fit: cover !important;
 }
 
-.showcase {
-  justify-content: center;
-}
-
-.showcase-item {
-  margin: 15px;
-}
-.online-title{
-  text-align:center;
-  font-weight: 700;
-}
-
-.contet-title {
-  font-size: 25px;
-  font-weight: 600;
-}
-
-.content-description {
-  font-size: 18px;
-}
-
-.online-second-part{
-  /* background-color: rgb(89, 89, 199); */
-  background-image: linear-gradient(to right,rgb(238, 31, 221),rgb(89, 89, 199));
-}
-.online-second-part-item1{
-  margin-top: 5vh;
-  background-color: #3c21d8;
-  width: 20vw;
-  height: 55vh;
-  opacity: 0.7;
-  position: absolute;
-}
-.online-second-part-item2{
-  margin-top: 20vh;
-  background-color: transparent;
-  position: relative;
-  position: absolute;
-}
-.online-second-part-item3 {
-  margin-top: 63vh;
-  background-color: transparent;
-  font-size: 20px;
-  position: relative;
-  position: absolute;
-}
-
-.first-item {
-  width: 35vw;
-  height: 40vh;
-}
-
-.second-item {
-  width: 35vw;
-  height: 40vh;
-}
-
-.third-item {
-  width: 20vw;
-  height: 40vh;
-}
-
-.fifth-item {
-  width: 20vw;
-  height: 40vh;
-}
-
-.capteria {
-  margin-top: 70vh;
-  position: absolute;
-  background-color: transparent;
-  width: 9vw;
-  height: 20vh;
-  position: relative;
-}
-.content-button{
-  width:135px;
-  height:34px;
-  text-align: initial;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  justify-content: var(--label-align);
-  --rd: 8px;
-  background-color:#ff33cc
-}
-.bg-color{
-  background-color: rgba(98, 1, 255, 0.7);
-}
-.online-container {
-  position: relative;
-  text-align: center;
-  color: white;
-  background-color: rgba(98, 1, 255, 0.7);  
-}
 .centered {
   position: absolute;
   top: 50%;
@@ -179,38 +80,156 @@ a {
   background: transparent;
   line-height: normal;
 }
-.image-container{
-  position: relative;
+
+.online-title{
+  text-align:center;
+  font-weight: 700;
+  font-size: 80px;
 }
-.bottom {
+
+.middle-border {
+  border: 1px solid #FFF;
+  width: 150px;
+}
+
+@media screen and (max-width: 786px) {
+  
+  .online-title{
+    text-align:center;
+    font-weight: 700;
+    font-size: 40px;
+  }
+}
+.showcase {
+  position: relative;
+  margin: 0px;
+}
+
+.btn-showcase {
   position: absolute;
-  bottom: 8px;
+  bottom: 1%;
+  left: 33%;
+  background-color: rgb(250, 54, 224);
+  color: #FFF;
   z-index: 100;
 }
 
-.companies {
-  opacity: 0.6;
+.btn-snpashort {
+  position: absolute;
+  bottom: 1%;
+  left: 22%;
+  background-color: #3c21d8;
+  color: #FFF;
+  z-index: 100;
+}
+
+.showcase-title {
+  font-size: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+}
+
+.showcase-item{
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.showcase-content {
+  padding-left: 25px;
+  padding-right: 25px;
+  font-size: 17px;
+}
+.online-slide {
+  min-height: 300px;
+  background-image: linear-gradient(to right,rgb(238, 31, 221),rgb(89, 89, 199));
+}
+
+.online-carousel-card {
+  margin-top: 5vh !important;
+  margin: auto;
+  background-color: #3c21d8;
+  width: 350px;
+  height: 50vh;
+  opacity: 0.5;
+}
+
+.online-carousel-text {
+  color: #FFF;
+  z-index: 100;
+  width: 33%;
+  margin-left: 33%;
+  margin-top: 20vh;
+  background-color: transparent;
+  /* position: relative; */
+  position: absolute;
+}
+
+
+@media screen and (max-width: 1280px){
+  .online-carousel-text {
+    color: #FFF;
+    z-index: 100;
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 20vh;
+    background-color: transparent;
+    /* position: relative; */
+    position: absolute;
+  } 
+}
+
+@media screen and (max-width: 678px){
+  .online-carousel-text {
+    color: #FFF;
+    z-index: 100;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 20vh;
+    background-color: transparent;
+    /* position: relative; */
+    position: absolute;
+  } 
+}
+
+.online-carousel-title {
+  margin-top: 2vh !important;
+  margin: auto;
+  width: 350px;
+  height: 28vh;
+  opacity: 0.5;
+}
+
+.capterra {
+  margin-top: 15vh !important;
+  margin: auto;
+  width: 350px;
+  height: 23vh;
+  opacity: 0.5;
 }
 
 .company {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  width: 20%;
-  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
-.logo-company {
-  margin: auto;
+
+@media screen and (max-width: 576px) {
+  .company-brand {
+    width: 60% !important;
+    margin-left: 20%;
+  }
 }
+
+.company-brand {
+  width: 100%;
+}
+
 
 .introduction {
   background-color: rgb( 240,240,240);
-}
-
-.intro-item {
-  width: 20%;
-  margin-top: 30px;
-  padding: 40px;
 }
 
 .intro-title {
@@ -222,7 +241,7 @@ a {
 .intro-description {
   font-size: 20px;
   text-align: center;
-  min-height: 350px;
+  min-height: 270px;
 }
 
 .itro-svg {
@@ -230,23 +249,12 @@ a {
   width: 180px;
 }
 
+
 .contact-us-container {
   background: rgba(186 55 236 / 85%);
 }
-
-.contact-form {
-  margin-left: 550px;
-  padding-top: 50px;
-  padding-right: 450px;
-  padding-bottom: 50px;
-}
-
-.contact-title {
-  /* font-weight: 800; */
-}
-
 .contact-title-text {
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .name-input{
@@ -267,9 +275,10 @@ input {
 }
 
 .link {
-  padding: 20px;
-  font-size: 18px;
   color: #fff;
+  text-decoration: none;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .container-title {
@@ -291,4 +300,313 @@ input {
   visibility: visible;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
+}
+
+.quote-btn {
+  background-color: rgb(224,68,110);
+  padding: 10px 35px 10px 35px;
+  font-size: 20px;
+  border-radius: 10px;
+}
+
+.calc-price {
+  border: 2px solid #d221d8;
+  color: #d221d8;
+  border-radius: 0%;
+}
+
+.description {
+  color: #3c21d8;
+  max-width: 500px;
+  margin-top: 40px !important;
+  margin-bottom: 40px !important;
+  margin: auto;
+}
+
+.pricing-cards {
+  background-color:rgb(133, 77, 255);
+}
+
+.card-size {
+  width: 63px;
+}
+
+.card-text {
+  color: #fff;
+  font-size: 17px;
+  margin-top: 15px;
+}
+
+
+.free {
+  background-color: #2dedb4;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 28px;
+}
+
+.get-free {
+  color: #2dedb4;
+  font-weight: bold;
+}
+
+.price {
+  background-color: #854DFF;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 28px;
+}
+
+.price-number {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.get-price {
+  color: #854DFF;
+  font-weight: bold
+}
+
+.element {
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
+}
+
+.handshake {
+  width: 65px;
+}
+
+.team {
+  border-left: solid 3px rgb(239, 239, 239);
+  border-right: solid 3px rgb(239, 239, 239);
+  text-align: center
+}
+
+.clients {
+  background-color: rgb(239, 239, 239);
+}
+
+.clients {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.tablemeeting {
+  height: 300px;
+}
+
+.tablemeeting-img {
+  height: 350px;
+}
+
+@media screen and (max-width: 1402px) {
+  
+  .tablemeeting-img {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+
+  .left-img-size {
+    height: 600px !important;
+  }
+
+  
+  .right-desc {
+    height: 600px !important;
+    background-color: #ececeb;
+    padding: 30px
+  }
+
+  .case-btn {
+    font-weight: bold;
+    margin: 20px;
+    color: #fff;
+    border-radius: 0%;
+    border: 2px solid #FFF;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 200px;
+  }
+
+  .case-title {
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 996px) {
+  .left-img-size {
+    height: 400px !important;
+  }
+  
+  .case-btn{
+    width: 150px !important;
+  }
+
+  
+  .left-img-size {
+    height: 400px !important;
+  }
+
+  
+  .right-desc {
+    height: 400px !important;
+    background-color: #ececeb;
+    padding: 10px
+  }
+
+  .case-btn {
+    color: #3c21d8;
+    margin: 5px !important;
+    border-radius: 0% !important;
+    border: 2px solid #3c21d8;
+    width: 150px !important;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+  }
+
+  .case-title {
+    color: #000;
+    font-size: 15px;
+    font-weight: bold;
+  }
+}
+
+
+@media screen and (max-width: 779px) {
+  .case-btn{
+    width: 100px !important;
+    margin: 10px !important;
+    padding-top: 5px !important;;
+    padding-bottom: 5px !important;
+    width: 100px !important;
+    font-size: 10px !important;
+  }
+
+  .middle-border-case {
+    margin-top: 10px;
+    border: 1px solid #FFF !important;
+    width: 250px !important;
+  }
+}
+
+.table-right {
+  background-image: linear-gradient(to right,rgb(131, 89, 199),rgb(70, 70, 226));
+}
+
+.meeting-text {
+  color: #fff;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.on-premise-apps{
+  color: #2dedb4;
+}
+
+
+.quote {
+  color: #fbfafd;
+  float: right;
+  margin: 12px;
+  border-radius: 0%;
+  border: 2px solid #fff;
+  padding: 10px;
+}
+
+
+.case-container {
+  position: relative;
+  text-align: center;
+  color: white;
+  height: 500px;
+  background-color: rgba(98, 1, 255, 0.7); 
+}
+
+.middle-border-case {
+  margin-top: 20px;
+  border: 1px solid #FFF;
+  width: 500px;
+}
+
+.case-btn{
+  color: #fbfafd;
+  font-weight: bold;
+  margin: 26px;
+  border-radius: 0%;
+  border: 2px solid #fff;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 250px;
+}
+
+.eductaion-title {
+  color:#3c21d8;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.cases-btn {
+  color: #3c21d8;
+  font-weight: bold;
+  margin: 20px;
+  border-radius: 0%;
+  border: 2px solid #3c21d8;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 200px;
+}
+
+.case-title {
+  color: #000;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.case-desc {
+  color: rgb(63, 62, 62);
+}
+
+.case-description {
+  background-color: #ececeb;
+  padding: 50px
+}
+
+.case-image {
+  width: -webkit-fill-available;
+}
+
+input {
+  border-radius: 0% !important;
+}
+
+.check-item {
+  font-weight: bold;
+  color: #3c21d8;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.btn-contact {
+  background-color: #d221d8;
+  color: #fff;
+}
+
+.used-by {
+  color: #3c21d8;
+}
+
+.btn-start {
+  background-color: #3c21d8;
+  color: #fff;
+}
+
+.image-container{
+  position: relative;
 }
