--- a/src/App.css
+++ b/src/App.css
@@ -610,3 +610,24 @@ input {
 .image-container{
   position: relative;
 }
+
+.faq-title {
+  font-size: 30px;
+  color: #2b76e7;
+}
+
+.faq-sb-title {
+  font-size: 26px;
+  color: #d221d8;
+  font-weight: bold;
+}
+
+.faq-sb2-title {
+  font-size: 26px;
+  color: #303030;
+}
+
+.faq-description {
+  font-size: 20px;
+  color: #303030;
+}
