--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,14 @@ body {
 }
 
 .logo img {
-  width: 130%;
+  width: 120%;
 }
 
 .navbar {
-  font-size: 19px !important;
+  font-size: 17px !important;
 }
 
-@media screen and (max-width: 1560px) {
+@media screen and (max-width: 1367px) {
   .logo {
     margin-top: 15px;
     margin-left: 10px !important;
@@ -526,7 +526,8 @@ input {
   text-align: center;
   color: white;
   height: 500px;
-  background-color: rgba(98, 1, 255, 0.7); 
+  background-image: linear-gradient(to right,rgb(131, 89, 199),rgb(70, 70, 226));
+  /* background-color: rgba(98, 1, 255, 0.7);  */
 }
 
 .middle-border-case {
@@ -837,3 +838,73 @@ input[type="email"] {
 .pricing-content {
   margin: 0 150px;
 }
+
+.about-content {
+  margin: 0 10%;
+  margin-top: 20px;
+}
+
+.about-footer {
+  margin: 0 60px;
+  margin-top: 20px;
+}
+
+.case-desc {
+  margin-top: 30px;
+}
+
+.beg-logo {
+  height: 60px;
+}
+
+
+.about-image {
+  width: 70%;
+}
+
+.about-desc {
+  width: 30%;
+}
+
+
+@media screen and (max-width: 1256px) {
+  .about-image {
+    width: 60%;
+  }
+  
+  .about-desc {
+    width: 40%;
+  }  
+}
+
+@media screen and (max-width: 1220px) {
+  .about-image {
+    width: 50%;
+  }
+  
+  .about-desc {
+    width: 50%;
+  }  
+
+  .about-footer {
+    margin: 0 60px;
+    margin-top: 10px;
+  }
+
+  .about-content {
+    margin: 0 5%;
+    margin-top: 20px;
+  }
+}
+
+
+@media screen and (max-width: 1200px) {
+  .about-image {
+    width: 100%;
+  }
+  
+  .about-desc {
+    width: 100%;
+  }  
+}
+
