--- a/src/App.css
+++ b/src/App.css
@@ -908,3 +908,337 @@ input[type="email"] {
   }  
 }
 
+
+
+
+.service-container {
+  position: relative;
+  text-align: center;
+  color: white;
+  background-color: rgba(238, 45, 238, 0.7);  
+}
+
+.service-back {
+  width: 100% !important;
+  height: 700px !important;
+  opacity: 0.4;
+  object-fit: cover !important;
+}
+
+
+
+.service-title{
+  text-align:center;
+  font-weight: 700;
+  font-size: 70px;
+}
+
+.microsoft .partner{
+  margin: auto;
+}
+
+.microsoft .desc{
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+
+@media screen and (max-width: 812px) {
+  .service-title{
+    text-align:center;
+    font-weight: 700;
+    font-size: 40px;
+  }
+
+  .microsoft .partner {
+    margin-top: 120px !important;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .microsoft .desc {
+    margin-top: 20px !important;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  
+  .svg-icon {
+    margin: auto !important;
+  }
+
+  .svg-icon-below {
+    margin: auto !important;
+  }
+
+  .service-answer {
+    width: 90% !important;
+    margin: auto;
+  }
+}
+
+.start-btn {
+  background-color: #2dedb4;
+  padding: 10px 50px 10px 50px;
+  font-size: 18px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+
+.start-btn:hover {
+  background-color: #e62ded;
+}
+
+.microsoft-border {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.microsoft {
+  background-color: #f0f0f0;
+}
+
+.service-svg-title {
+  color: #4103f8;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.service-svg-content {
+  line-height:1.7em; 
+  text-align:center; 
+  font-size:15px;
+}
+
+.svg-icon {
+  margin: 0 118px;
+}
+
+.svg-icon-below {
+  margin: 17.25px 63px;
+}
+
+.microsoft .capstar {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
+
+.general-font {
+  color: #6201ff;
+  font-weight: bold;
+}
+
+.service-answer {
+  width: 30%;
+  margin: auto;
+}
+.work-answer {
+  width: 50%;
+  margin: auto;
+}
+
+.micro-order {
+  font-size: 77px;
+  color: #6201ff;
+  font-weight: bold;
+}
+
+.micro-desc {
+  margin-top: 15px;
+}
+
+.micro-title {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.micro-content {
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.service-contact {
+  background-color: #7933eb;
+  --bg-gradient: none;
+  --fill-layer-image-opacity: 0.38;
+}
+
+
+.projectSync-container {
+  position: relative;
+  text-align: center;
+  color: white;
+  /* height: 90vh; */
+  min-height: 550px;
+  background-image: linear-gradient(to bottom,rgb(221, 28, 255, 0.9),rgb(89, 89, 199));
+}
+
+
+.projectSync-centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0;
+  border: 0;
+  outline: 0;
+  vertical-align: baseline;
+  background: transparent;
+  line-height: normal;
+}
+
+.project-sync-image {
+  position: relative;
+  text-align: center;
+  color: white;
+  margin: 10%;
+}
+
+.projectSync-right {
+  position: absolute;
+  right: 0%;
+  width: 40%;
+  background-color: rgba(142, 58, 171, 0.548) !important;
+  height: 100%;
+  padding: 50px;
+  border: 0;
+  outline: 0;
+  vertical-align: baseline;
+  background: transparent;
+  line-height: normal;
+}
+
+.case-studies {
+  padding-top: 40px;
+}
+
+@media screen and (max-width: 768px){
+  
+  .projectSync-right {
+    position: absolute;
+    right: 0%;
+    width: 40%;
+    background-color: rgba(142, 58, 171, 0.548) !important;
+    height: 100%;
+    padding: 1px;
+    border: 0;
+    outline: 0;
+    vertical-align: baseline;
+    background: transparent;
+    line-height: normal;
+  }
+
+  .project-sync-image {
+    position: relative;
+    text-align: center;
+    color: white;
+    margin: 1% !important;
+  }
+  
+  
+  .case-studies {
+    margin-top: 10px !important;
+    font-size: 10px !important;
+  }
+  .project-border {
+    border: 0.5px solid #FFF;
+    background: #fff;
+    width: 80px;
+    margin-top: 1px !important;
+  }
+  
+  .utility-btn {
+    border: 1px solid #fff;
+    border-radius: 0px;
+    margin-top: 10px !important;
+    color: #fff !important;
+    font-size: 65% !important;
+  }
+
+  
+  .utilities {
+    font-size: 10px !important;
+    margin-bottom: 1px !important;
+  }
+
+  .list-sync-carousel {
+    padding: 1% !important;
+  }
+
+  .finance-right {
+    padding-top: 1px !important;
+  }
+
+  
+
+  .listSync-right {
+    padding-top: 1px !important;
+  }
+  
+}
+
+
+.project-border {
+  border: 0.5px solid #FFF;
+  background: #fff;
+  width: 80px;
+  margin-top: 30px;
+}
+
+.utility-btn {
+  border: 1px solid #fff;
+  border-radius: 0px;
+  margin-top: 40px;
+  color: #fff;
+}
+
+.utilities {
+  font-size: 35px;
+}
+
+.list-sync-carousel {
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 2%;
+}
+
+
+.listSync-right {
+  position: absolute;
+  right: 0%;
+  width: 40%;
+  background-color: rgba(142, 58, 171, 0.548) !important;
+  height: 100%;
+  border: 0;
+  padding-top: 80px;
+  outline: 0;
+  vertical-align: baseline;
+  background: transparent;
+  line-height: normal;
+}
+.finance-right {
+  position: absolute;
+  right: 0%;
+  width: 40%;
+  background-color: rgba(85, 49, 185, 0.548) !important;
+  height: 100%;
+  padding-top: 80px;
+  border: 0;
+  outline: 0;
+  vertical-align: baseline;
+  background: transparent;
+  line-height: normal;
+}
+
+.list-sync-image {
+  position: relative;
+  text-align: center;
+  color: white;
+  padding: 0px;
+}
+
+.blue-color {
+  color: #15eb55;
+}
