--- a/src/App.css
+++ b/src/App.css
@@ -680,7 +680,8 @@ input {
 }
 
 .faq-description {
-  font-size: 20px;
+  font-size: 18px;
+  text-align: justify;
   color: #303030;
 }
 
@@ -700,7 +701,7 @@ input {
   font-size: 30px;
 }
 .sp-top-title {
-  font-size: 23px;
+  font-size: 18px;
   font-weight: 200;
 }
 .sp-title {
@@ -710,7 +711,8 @@ input {
 }
 
 .sp-desc {
-  font-size: 23px;
+  font-size: 18px;
+  text-align: justify;
 }
 
 .middle-sp-border {
